tests/NormalTests/paczka1/small_fuzzy/19970778.err
Error in line 2: JrnGU S6 57,85
Error in line 9: OMMG S993 2,0
Error in line 3: JrnGU S6 67,8
Error in line 10: OMMG A705 56,7
